...
//  Created by Joel Rosa Tavares on 26/06/25.
//

import UIKit

class SynopsisCell: UITableViewCell {
    internal lazy var synopsisLabel = UILabelFactory.createLabel(fontSize: 16, numberOfLines: 0, accessibleIdentifier: "SynopsisLabel")
    lazy var showMoreButton = UIButtonFactory.createButton(title: "Show more")
    private lazy var stackView = UIStackViewFactory.createVerticalStackView()
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
        setupUI()
...
