...

class MovieInfoCell: UITableViewCell {
    let viewModel = CinemaRealmViewModel()
    var movie: Cinema.Movie?
    
    private lazy var backdropImageView = UIImageViewFactory.createAspectFillImageView()
    private lazy var titleLabel = UILabelFactory.createTitleLabel(accessibleIdentifier: "MovieTitleLabel")
    private lazy var addFavoriteButton = UIButtonFactory.createButton(title: "ADD Favorite")
    private lazy var titleHStackView = UIStackViewFactory.createHorizontalStackView()
    
    private lazy var ratingLabel = UILabelFactory.createRatingLabel()
    private lazy var durationLabel = UILabelFactory.createLabel(text: "2Hr 10m | R", fontSize: 18)
    private lazy var genresLabel = UILabelFactory.createLabel(fontSize: 18)
...
